--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/normalize.css">
 </head>
-<body>
+<body class="page">
 	
 </body>
 </html>
