--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,21 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page">
-	
+	<header class="header">
+		<div class="header__inner">
+			<nav class="menu">
+				<ul class="menu__list">
+					<li class="menu__item"><a class="menu__link" href="#">Компетенции</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Проекты</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Стоимость</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Этапы и отзывы</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Частые вопросы</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Контакты</a></li>
+				</ul>
+			</nav>
+			<address class="menu__phone"><a class="phone" href="tel:+79526684422">+7 (952) 668-44-22</a></address>
+			<button class="btn btn--header">Задать вопрос</button>
+		</div>
+	</header>
 </body>
 </html>
