--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
 </head>
 <body class="page">
 	<header class="header">
@@ -25,5 +26,19 @@
 			<button class="btn btn--header">Задать вопрос</button>
 		</div>
 	</header>
+	<main class="main">
+		<section class="main-screen">
+			<div class="main-screen__content">
+				<p class="main-screen__text">Комплексное предложение для ИП и малого бизнеса</p>
+				<h1 class="main-screen__headline">
+					Логотип <i class="main-screen__arrow"></i>
+					Сайт <i class="main-screen__arrow"></i>
+					Реклама <i class="main-screen__arrow"></i>
+					Поддержка
+				</h1>
+				<button class="btn btn--main-screen">Отправить заявку</button>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
