--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
 </head>
 <body class="page">
 	<header class="header">
+		<h1 class="visually-hidden">BerezkaStudio Company</h1>
 		<div class="header__inner">
 			<nav class="menu">
+				<h2 class="visually-hidden">Главная навигация по сайту</h2>
 				<ul class="menu__list">
 					<li class="menu__item"><a class="menu__link" href="#">Компетенции</a></li>
 					<li class="menu__item"><a class="menu__link" href="#">Проекты</a></li>
@@ -30,12 +32,12 @@
 		<section class="main-screen">
 			<div class="main-screen__content">
 				<p class="main-screen__text">Комплексное предложение для ИП и малого бизнеса</p>
-				<h1 class="main-screen__headline">
+				<h2 class="main-screen__headline">
 					Логотип <i class="main-screen__arrow"></i>
 					Сайт <i class="main-screen__arrow"></i>
 					Реклама <i class="main-screen__arrow"></i>
 					Поддержка
-				</h1>
+				</h2>
 				<button class="btn btn--main-screen">Отправить заявку</button>
 			</div>
 		</section>
