--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,24 @@
 				<button class="btn btn--main-screen">Отправить заявку</button>
 			</div>
 		</section>
+		<!-- adv - advantages -->
+		<section class="adv">
+			<h2 class="visually-hidden">Преимущества</h2>
+			<div class="adv__inner">
+				<div class="adv__item adv__item--present">
+					<h3 class="adv__headline">Логотип в подарок</h3>
+					<p class="adv__text">При заказе сайта предложим<br> 2 варианта лого бесплатно</p>
+				</div>
+				<div class="adv__item adv__item--cheaper">
+					<h3 class="adv__headline">У нас дешевле</h3>
+					<p class="adv__text">При комплексном заказе <br>услуг стоимость работ<br> дешевле</p>
+				</div>
+				<div class="adv__item adv__item--time">
+					<h3 class="adv__headline">Вы экономите время</h3>
+					<p class="adv__text">Не нужно тратить время на<br> поиск подрядчиков для разных <br>задач</p>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
