Почти готовая секция статистики - без иконки цитаты

--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,42 @@
 				</div>
 			</div>
 		</section>
+		<!-- stats - statistics -->
+		<section class="stats">
+			<div class="stats__inner">
+				<div class="stats__content">
+					<h2 class="headline">В цифрах о нас</h2>
+					<p class="stats__main-text">
+						Альянс нетривиальных творческих идей и современных технологий для разработки интернет-решений
+					</p>
+					<p class="stats__descr">
+						Наша команда трудится вместе продолжительное время, у нас выстроены рабочие процессы и коммуникации между её участниками. Мы следим за трендами и технологиями. Гарантируем высокое качество исполнения за адекватную стоимость на российском рынке.
+					</p>
+				</div>
+				<div class="stats__numbers">
+					<div class="stats__num">
+						<p class="stats__top-text">Средний опыт<br> работы специалистов</p>
+						<p class="stats__number">9</p>
+						<p class="stats__bottom-text">лет</p>
+					</div>	
+					<div class="stats__num">
+						<p class="stats__top-text">Работаем <br>в области разработки</p>
+						<p class="stats__number">12</p>
+						<p class="stats__bottom-text">лет</p>
+					</div>	
+					<div class="stats__num">
+						<p class="stats__top-text">Выполнено<br> более</p>
+						<p class="stats__number">200</p>
+						<p class="stats__bottom-text">проектов</p>
+					</div>	
+					<div class="stats__num">
+						<p class="stats__top-text">Обращаются <br>по рекомендации</p>
+						<p class="stats__number">67%</p>
+						<p class="stats__bottom-text">заказчиков</p>
+					</div>	
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
