Набросок секции с примерами работ

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,28 @@
 				</div>
 			</div>
 		</section>
+		<section class="projects">
+			<div class="projects__inner">
+				<div class="projects__header">
+					<h2 class="projects__headline">Проекты выполненные нашей командой
+					<br> лучшее подтверждение её компетенций и опыта</h2>
+					<p class="projects__descr">Мы занимаемся созданием сайтов, брендингом, рекламой и развиваем проекты в digital.</p>
+				</div>
+				<div class="projects__examples">
+					<div class="projects__example">
+						 <div class="projects__slider">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="" alt="" class="projects__slide">
+						 	<img src="" alt="" class="projects__slide">
+						 </div>
+						 <div class="projects__name">
+						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+					     </div>
+					     <div class="projects__count-slide">2/7</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
