Готовая секция без слайдеров и иконок ссылки

--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,28 @@
 					     </div>
 					     <div class="projects__count-slide">2/7</div>
 					</div>
+					<div class="projects__example">
+						 <div class="projects__pict">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 </div>
+						 <div class="projects__name">
+						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+					     </div>
+					     <a href="#" class="projects__link">
+					     	<p class="visually-hidden">Ссылка на работу</p>
+					     </a>
+					</div>
+					<div class="projects__example">
+						 <div class="projects__slider">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="" alt="" class="projects__slide">
+						 	<img src="" alt="" class="projects__slide">
+						 </div>
+						 <div class="projects__name">
+						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+					     </div>
+					     <div class="projects__count-slide">2/7</div>
+					</div>
 				</div>
 			</div>
 		</section>
