--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	
+	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/media.css">
+
 </head>
 <body class="page">
 	<header class="header">
@@ -105,14 +108,14 @@
 				<div class="projects__examples">
 					<div class="projects__example">
 						 <div class="projects__slider">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
-						 	<img src="" alt="" class="projects__slide">
-						 	<img src="" alt="" class="projects__slide">
+					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
 						 </div>
 						 <div class="projects__name">
 						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
 					     </div>
-					     <div class="projects__count-slide">2/7</div>
+					     <div class="projects__count-slide">1/7</div>
 					</div>
 					<div class="projects__example">
 						 <div class="projects__pict">
@@ -128,8 +131,8 @@
 					<div class="projects__example">
 						 <div class="projects__slider">
 						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
-						 	<img src="" alt="" class="projects__slide">
-						 	<img src="" alt="" class="projects__slide">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
 						 </div>
 						 <div class="projects__name">
 						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
@@ -140,5 +143,11 @@
 			</div>
 		</section>
 	</main>
+
+	<script src="js/jquery.min.js"></script>
+
+	<script src="js/slick.min.js"></script>
+
+	<script src="js/main.js"></script>
 </body>
 </html>
