Готова секция готовые работы

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	
 	<link rel="stylesheet" href="css/slick.css">
-	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -103,7 +102,7 @@
 				<div class="projects__header">
 					<h2 class="projects__headline">Проекты выполненные нашей командой
 					<br> лучшее подтверждение её компетенций и опыта</h2>
-					<p class="projects__descr">Мы занимаемся созданием сайтов, брендингом, рекламой и развиваем проекты в digital.</p>
+					<p class="projects__descr">Мы занимаемся созданием сайтов, брендингом, рекламой<br> и развиваем проекты в digital.</p>
 				</div>
 				<div class="projects__examples">
 					<div class="projects__example">
@@ -115,7 +114,7 @@
 						 <div class="projects__name">
 						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
 					     </div>
-					     <div class="projects__count-slide">1/7</div>
+					     <div class="projects__count-slide"></div>
 					</div>
 					<div class="projects__example">
 						 <div class="projects__pict">
@@ -134,11 +133,48 @@
 						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
 						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
 						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
 						 </div>
 						 <div class="projects__name">
 						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
 					     </div>
-					     <div class="projects__count-slide">2/7</div>
+					     <div class="projects__count-slide"></div>
+					</div>
+					<div class="projects__example">
+						 <div class="projects__pict">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 </div>
+						 <div class="projects__name">
+						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+					     </div>
+					     <a href="#" class="projects__link">
+					     	<p class="visually-hidden">Ссылка на работу</p>
+					     	<svg class="projects__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 33.3 33.3"><defs><path id="a" d="M19.8 9.3l-2.3 2.3a3.32 3.32 0 0 0 0 4.7c1.3 1.3 3.4 1.3 4.7 0l2.3-2.3c1.3-1.3 1.3-3.4 0-4.7-.7-.7-1.5-1-2.4-1-.8.1-1.7.4-2.3 1"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="none" stroke="#7E9498" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M19.8 9.3c1.3-1.3 3.4-1.3 4.7 0 1.3 1.3 1.3 3.4 0 4.7l-2.3 2.3a3.32 3.32 0 0 1-4.7 0 3.32 3.32 0 0 1 0-4.7l2.3-2.3z"/><defs><path id="c" d="M12 17.1l-2.3 2.3a3.32 3.32 0 0 0 0 4.7c1.3 1.3 3.4 1.3 4.7 0l2.3-2.3c1.3-1.3 1.3-3.4 0-4.7-.7-.7-1.5-1-2.4-1-.8 0-1.6.3-2.3 1"/></defs><clipPath id="d"><use xlink:href="#c" overflow="visible"/></clipPath><path clip-path="url(#d)" fill="none" stroke="#7E9498" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12 17.1c1.3-1.3 3.4-1.3 4.7 0 1.3 1.3 1.3 3.4 0 4.7l-2.3 2.3a3.32 3.32 0 0 1-4.7 0 3.32 3.32 0 0 1 0-4.7l2.3-2.3z"/><path fill="none" stroke="#7E9498" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M19.5 14.7L15 19.1"/><defs><path id="e" d="M.8.6h31.9v32H.8z"/></defs><clipPath id="f"><use xlink:href="#e" overflow="visible"/></clipPath><ellipse clip-path="url(#f)" fill="none" stroke="#7E9498" stroke-width="2" stroke-miterlimit="10" cx="16.7" cy="16.6" rx="15" ry="15"/></svg>
+					     </a>
+					</div>
+					<div class="projects__example">
+						 <div class="projects__pict">
+						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 </div>
+						 <div class="projects__name">
+						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+					     </div>
+					     <a href="#" class="projects__link">
+					     	<p class="visually-hidden">Ссылка на работу</p>
+					     	<svg class="projects__icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 33.3 33.3"><defs><path id="a" d="M19.8 9.3l-2.3 2.3a3.32 3.32 0 0 0 0 4.7c1.3 1.3 3.4 1.3 4.7 0l2.3-2.3c1.3-1.3 1.3-3.4 0-4.7-.7-.7-1.5-1-2.4-1-.8.1-1.7.4-2.3 1"/></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"/></clipPath><path clip-path="url(#b)" fill="none" stroke="#7E9498" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M19.8 9.3c1.3-1.3 3.4-1.3 4.7 0 1.3 1.3 1.3 3.4 0 4.7l-2.3 2.3a3.32 3.32 0 0 1-4.7 0 3.32 3.32 0 0 1 0-4.7l2.3-2.3z"/><defs><path id="c" d="M12 17.1l-2.3 2.3a3.32 3.32 0 0 0 0 4.7c1.3 1.3 3.4 1.3 4.7 0l2.3-2.3c1.3-1.3 1.3-3.4 0-4.7-.7-.7-1.5-1-2.4-1-.8 0-1.6.3-2.3 1"/></defs><clipPath id="d"><use xlink:href="#c" overflow="visible"/></clipPath><path clip-path="url(#d)" fill="none" stroke="#7E9498" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M12 17.1c1.3-1.3 3.4-1.3 4.7 0 1.3 1.3 1.3 3.4 0 4.7l-2.3 2.3a3.32 3.32 0 0 1-4.7 0 3.32 3.32 0 0 1 0-4.7l2.3-2.3z"/><path fill="none" stroke="#7E9498" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M19.5 14.7L15 19.1"/><defs><path id="e" d="M.8.6h31.9v32H.8z"/></defs><clipPath id="f"><use xlink:href="#e" overflow="visible"/></clipPath><ellipse clip-path="url(#f)" fill="none" stroke="#7E9498" stroke-width="2" stroke-miterlimit="10" cx="16.7" cy="16.6" rx="15" ry="15"/></svg>
+					     </a>
+					</div>
+					<div class="projects__example">
+						 <div class="projects__slider">
+					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+						 </div>
+						 <div class="projects__name">
+						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+					     </div>
+					     <div class="projects__count-slide"></div>
 					</div>
 				</div>
 			</div>
