Готова секция с примерами работ

--- a/src/index.html
+++ b/src/index.html
@@ -107,9 +107,9 @@
 				<div class="projects__examples">
 					<div class="projects__example">
 						 <div class="projects__slider">
-					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
-					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
-					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_1.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_1.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_1.jpg" width="421" height="251" alt="">
 						 </div>
 						 <div class="projects__name">
 						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
@@ -118,10 +118,10 @@
 					</div>
 					<div class="projects__example">
 						 <div class="projects__pict">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_2.jpg" width="421" height="251" alt="">
 						 </div>
 						 <div class="projects__name">
-						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+						 	Разработка сайта производителя ткани и комплектующих «Magma»
 					     </div>
 					     <a href="#" class="projects__link">
 					     	<p class="visually-hidden">Ссылка на работу</p>
@@ -130,23 +130,23 @@
 					</div>
 					<div class="projects__example">
 						 <div class="projects__slider">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_3.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_3.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_3.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_3.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_3.jpg" width="421" height="251" alt="" class="projects__slide">
 						 </div>
 						 <div class="projects__name">
-						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+						 	Разработка корпоративного календаря авторитейла
 					     </div>
 					     <div class="projects__count-slide"></div>
 					</div>
 					<div class="projects__example">
 						 <div class="projects__pict">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_4.jpg" width="421" height="251" alt="">
 						 </div>
 						 <div class="projects__name">
-						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+						 	Дизайн сайта интернет-магазина свадебного салона
 					     </div>
 					     <a href="#" class="projects__link">
 					     	<p class="visually-hidden">Ссылка на работу</p>
@@ -155,10 +155,10 @@
 					</div>
 					<div class="projects__example">
 						 <div class="projects__pict">
-						 	<img src="img/projects_example.jpg" width="421" height="251" alt="" class="projects__slide">
+						 	<img src="img/projects_examples/projects_example_5.jpg" width="421" height="251" alt="" class="projects__slide">
 						 </div>
 						 <div class="projects__name">
-						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+						 	Создание дизайна корпоративного сайта «Строительной энергетической компании»
 					     </div>
 					     <a href="#" class="projects__link">
 					     	<p class="visually-hidden">Ссылка на работу</p>
@@ -167,12 +167,12 @@
 					</div>
 					<div class="projects__example">
 						 <div class="projects__slider">
-					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
-					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
-					 		<img class="projects__slide" src="img/projects_example.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
+					 		<img class="projects__slide" src="img/projects_examples/projects_example_6.jpg" width="421" height="251" alt="">
 						 </div>
 						 <div class="projects__name">
-						 	Фирменного стиль  и дизайн-поддержка бренда «Laccom»
+						 	Разработка логотипа промоутерской компании «Регион 150»
 					     </div>
 					     <div class="projects__count-slide"></div>
 					</div>
