--- a/src/index.html
+++ b/src/index.html
@@ -99,11 +99,11 @@
 		</section>
 		<section class="projects">
 			<div class="projects__inner">
-				<div class="projects__header">
+				<header class="projects__header">
 					<h2 class="projects__headline">Проекты выполненные нашей командой
 					<br> лучшее подтверждение её компетенций и опыта</h2>
 					<p class="projects__descr">Мы занимаемся созданием сайтов, брендингом, рекламой<br> и развиваем проекты в digital.</p>
-				</div>
+				</header>
 				<div class="projects__examples">
 					<div class="projects__example">
 						 <div class="projects__slider">
@@ -177,6 +177,33 @@
 					     <div class="projects__count-slide"></div>
 					</div>
 				</div>
+			</div>
+		</section>
+		<section class="price">
+			<div class="price__inner">
+				<header class="price__header">
+					<h2 class="headline price__headline">Cтоимость комплекса услуг</h2>
+					<p class="price__text">Предлагаем Вас ознакомится со стоимостью услуг на рекламу при открытии собственного дела.   Мы поможем Вам определить смету и сроки создания вашего логотипа, фирменного стиля, <br>веб-ресурса, а также последующего продвижения и сопровождения Вашего бизнеса. </p>
+					<p class="price__text price__text--action">Вам нужно только <a class="price__call-to-action" href="#">отправить нам заявку.</a></p>
+				</header>
+				<ul class="price__list">
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">7</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">
+							Создание лого или фирменного стиля 
+							<i class="price__faq"></i>
+						</p>
+
+						<div class="price__descr"></div>
+					</li>
+					<li class="price__item"></li>
+					<li class="price__item"></li>
+					<li class="price__item"></li>
+					<li class="price__item"></li>
+					<li class="price__item"></li>
+				</ul>
 			</div>
 		</section>
 	</main>
