--- a/src/index.html
+++ b/src/index.html
@@ -192,10 +192,9 @@
 							от <i class="price__number">7</i> тыс. <i class="price__rouble">s</i>
 						</p>
 						<p class="price__name">
-							Создание лого или фирменного стиля 
+							Создание лого <br>или фирменного стиля 
 							<i class="price__faq"></i>
 						</p>
-
 						<div class="price__descr"></div>
 					</li>
 					<li class="price__item"></li>
