Сделал секцию price без всплывающий окон

--- a/src/index.html
+++ b/src/index.html
@@ -197,11 +197,64 @@
 						</p>
 						<div class="price__descr"></div>
 					</li>
-					<li class="price__item"></li>
-					<li class="price__item"></li>
-					<li class="price__item"></li>
-					<li class="price__item"></li>
-					<li class="price__item"></li>
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">1</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">
+							Создание рекламных материалов 
+							<i class="price__faq"></i>
+						</p>
+						<div class="price__descr"></div>
+					</li>
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">20</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">
+							Создание сайта (лендинг, сайт визитка, магазин)
+							<i class="price__faq"></i>
+						</p>
+						<div class="price__descr"></div>
+					</li>
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">
+							Настройка и ведение рекламы в интернете
+							<i class="price__faq"></i>
+						</p>
+						<div class="price__descr"></div>
+					</li>
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">14</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">
+							SEO-продвижение 
+							<i class="price__faq"></i>
+						</p>
+						<div class="price__descr"></div>
+					</li>
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">18</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">
+							Поддержка сайта 
+							<i class="price__faq"></i>
+						</p>
+						<div class="price__descr descr">
+							<h3 class="descr__headline"></h3>
+							<p class="descr__text"></p>
+							<ul class="descr__price-list">
+								<li class="descr__item"></li>
+								<li class="descr__item"></li>
+								<li class="descr__item"></li>
+							</ul>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</section>
