--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,6 @@
 							Создание лого <br>или фирменного стиля 
 							<i class="price__faq"></i>
 						</p>
-						<div class="price__descr"></div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
@@ -221,11 +220,22 @@
 						<p class="price__main-price">
 							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">
-							Настройка и ведение рекламы в интернете
-							<i class="price__faq"></i>
-						</p>
-						<div class="price__descr"></div>
+						<p class="price__name">Настройка и ведение рекламы в интернете</p>
+						<i class="price__faq"></i>
+						<div class="price__descr descr">
+							<h3 class="descr__headline">Интернет-реклама</h3>
+							<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
+							<h4 class="descr__price-list-head">Стоимость</h4>
+							<ul class="descr__price-list">
+								<li class="descr__item">- сбор семантики  от 5 000 руб.</li>
+								<li class="descr__item">- кампания в Яндекс Директ от 10 000 руб. </li>
+								<li class="descr__item">- разовая акция и/или ежемесячная</li>
+							</ul>
+							<div class="descr__banner">
+								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
+							</div>
+							<span class="descr__close"></span>
+						</div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
@@ -245,15 +255,6 @@
 							Поддержка сайта 
 							<i class="price__faq"></i>
 						</p>
-						<div class="price__descr descr">
-							<h3 class="descr__headline"></h3>
-							<p class="descr__text"></p>
-							<ul class="descr__price-list">
-								<li class="descr__item"></li>
-								<li class="descr__item"></li>
-								<li class="descr__item"></li>
-							</ul>
-						</div>
 					</li>
 				</ul>
 			</div>
