Секция под отзывы и шаги

--- a/src/index.html
+++ b/src/index.html
@@ -191,29 +191,22 @@
 						<p class="price__main-price">
 							от <i class="price__number">7</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">
-							Создание лого <br>или фирменного стиля 
-							<i class="price__faq"></i>
-						</p>
+						<p class="price__name">Создание лого <br>или фирменного стиля </p>
+						<i class="price__faq"></i>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
 							от <i class="price__number">1</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">
-							Создание рекламных материалов 
-							<i class="price__faq"></i>
-						</p>
+						<p class="price__name">Создание рекламных материалов</p>
+						<i class="price__faq"></i>
 						<div class="price__descr"></div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
 							от <i class="price__number">20</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">
-							Создание сайта (лендинг, сайт визитка, магазин)
-							<i class="price__faq"></i>
-						</p>
+						<p class="price__name">Создание сайта (лендинг, сайт визитка, магазин)</p><i class="price__faq"></i>
 						<div class="price__descr"></div>
 					</li>
 					<li class="price__item">
@@ -241,22 +234,39 @@
 						<p class="price__main-price">
 							от <i class="price__number">14</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">
-							SEO-продвижение 
-							<i class="price__faq"></i>
-						</p>
+						<p class="price__name">SEO-продвижение</p>
+						<i class="price__faq"></i>
 						<div class="price__descr"></div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
 							от <i class="price__number">18</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">
-							Поддержка сайта 
-							<i class="price__faq"></i>
-						</p>
+						<p class="price__name">Поддержка сайта </p>
+						<i class="price__faq"></i>
 					</li>
 				</ul>
+			</div>
+		</section>
+		<section class="feedback">
+			<h2 class="visually-hidden">Отзывы и этапы работы</h2>
+			<div class="feedback__inner">
+				<div class="feed-item feed-item--steps">
+					<h3 class="feed-item__headline">Этапы сотрудничества</h3>
+					<div class="feed-item__slider">
+						<div class="feed-item__slide"></div>
+						<div class="feed-item__slide"></div>
+						<div class="feed-item__slide"></div>
+					</div>
+				</div>
+				<div class="feed-item feed-item--reviews">
+					<h3 class="feed-item__headline">Отзывы заказчиков</h3>
+					<div class="feed-item__slider">
+						<div class="feed-item__item"></div>
+						<div class="feed-item__item"></div>
+						<div class="feed-item__item"></div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</main>
