Добавил прямоугольники для всех прайс-листов

--- a/src/index.html
+++ b/src/index.html
@@ -189,25 +189,72 @@
 				<ul class="price__list">
 					<li class="price__item">
 						<p class="price__main-price">
-							от <i class="price__number">7</i> тыс. <i class="price__rouble">s</i>
+							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">Создание лого <br>или фирменного стиля </p>
+						<p class="price__name">Настройка и ведение рекламы в интернете</p>
 						<i class="price__faq"></i>
+						<div class="price__descr descr">
+							<h3 class="descr__headline">Интернет-реклама</h3>
+							<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
+							<h4 class="descr__price-list-head">Стоимость</h4>
+							<ul class="descr__price-list">
+								<li class="descr__item">- сбор семантики  от 5 000 руб.</li>
+								<li class="descr__item">- кампания в Яндекс Директ от 10 000 руб. </li>
+								<li class="descr__item">- разовая акция и/или ежемесячная</li>
+							</ul>
+							<div class="descr__banner">
+								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
+							</div>
+							<button class="descr__close">
+								<span class="visually-hidden">Закрыть окно</span>
+							</button>
+						</div>
+					</li>	
+					<li class="price__item">
+						<p class="price__main-price">
+							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
+						</p>
+						<p class="price__name">Настройка и ведение рекламы в интернете</p>
+						<i class="price__faq"></i>
+						<div class="price__descr descr">
+							<h3 class="descr__headline">Интернет-реклама</h3>
+							<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
+							<h4 class="descr__price-list-head">Стоимость</h4>
+							<ul class="descr__price-list">
+								<li class="descr__item">- сбор семантики  от 5 000 руб.</li>
+								<li class="descr__item">- кампания в Яндекс Директ от 10 000 руб. </li>
+								<li class="descr__item">- разовая акция и/или ежемесячная</li>
+							</ul>
+							<div class="descr__banner">
+								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
+							</div>
+							<button class="descr__close">
+								<span class="visually-hidden">Закрыть окно</span>
+							</button>
+						</div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
-							от <i class="price__number">1</i> тыс. <i class="price__rouble">s</i>
+							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">Создание рекламных материалов</p>
+						<p class="price__name">Настройка и ведение рекламы в интернете</p>
 						<i class="price__faq"></i>
-						<div class="price__descr"></div>
-					</li>
-					<li class="price__item">
-						<p class="price__main-price">
-							от <i class="price__number">20</i> тыс. <i class="price__rouble">s</i>
-						</p>
-						<p class="price__name">Создание сайта (лендинг, сайт визитка, магазин)</p><i class="price__faq"></i>
-						<div class="price__descr"></div>
+						<div class="price__descr price__descr--corner descr">
+							<h3 class="descr__headline">Интернет-реклама</h3>
+							<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
+							<h4 class="descr__price-list-head">Стоимость</h4>
+							<ul class="descr__price-list">
+								<li class="descr__item">- сбор семантики  от 5 000 руб.</li>
+								<li class="descr__item">- кампания в Яндекс Директ от 10 000 руб. </li>
+								<li class="descr__item">- разовая акция и/или ежемесячная</li>
+							</ul>
+							<div class="descr__banner">
+								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
+							</div>
+							<button class="descr__close">
+								<span class="visually-hidden">Закрыть окно</span>
+							</button>
+						</div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
@@ -227,23 +274,56 @@
 							<div class="descr__banner">
 								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
 							</div>
-							<span class="descr__close"></span>
+							<button class="descr__close">
+								<span class="visually-hidden">Закрыть окно</span>
+							</button>
 						</div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
-							от <i class="price__number">14</i> тыс. <i class="price__rouble">s</i>
+							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">SEO-продвижение</p>
+						<p class="price__name">Настройка и ведение рекламы в интернете</p>
 						<i class="price__faq"></i>
-						<div class="price__descr"></div>
+						<div class="price__descr descr">
+							<h3 class="descr__headline">Интернет-реклама</h3>
+							<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
+							<h4 class="descr__price-list-head">Стоимость</h4>
+							<ul class="descr__price-list">
+								<li class="descr__item">- сбор семантики  от 5 000 руб.</li>
+								<li class="descr__item">- кампания в Яндекс Директ от 10 000 руб. </li>
+								<li class="descr__item">- разовая акция и/или ежемесячная</li>
+							</ul>
+							<div class="descr__banner">
+								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
+							</div>
+							<button class="descr__close">
+								<span class="visually-hidden">Закрыть окно</span>
+							</button>
+						</div>
 					</li>
 					<li class="price__item">
 						<p class="price__main-price">
-							от <i class="price__number">18</i> тыс. <i class="price__rouble">s</i>
+							от <i class="price__number">9</i> тыс. <i class="price__rouble">s</i>
 						</p>
-						<p class="price__name">Поддержка сайта </p>
+						<p class="price__name">Настройка и ведение рекламы в интернете</p>
 						<i class="price__faq"></i>
+						<div class="price__descr price__descr--corner descr">
+							<h3 class="descr__headline">Интернет-реклама</h3>
+							<p class="descr__text">Услуга поможет Вам рассказать потенциальным клиентам о компании, продукции или услугах в поисковой системе Яндекс и в его партнерской сети сайтов.</p>
+							<h4 class="descr__price-list-head">Стоимость</h4>
+							<ul class="descr__price-list">
+								<li class="descr__item">- сбор семантики  от 5 000 руб.</li>
+								<li class="descr__item">- кампания в Яндекс Директ от 10 000 руб. </li>
+								<li class="descr__item">- разовая акция и/или ежемесячная</li>
+							</ul>
+							<div class="descr__banner">
+								<img class="descr__img" src="img/descr_banner.jpg" width="186" height="63" alt="">
+							</div>
+							<button class="descr__close">
+								<span class="visually-hidden">Закрыть окно</span>
+							</button>
+						</div>
 					</li>
 				</ul>
 			</div>
