Контентная часть для шагов

--- a/src/index.html
+++ b/src/index.html
@@ -346,7 +346,12 @@
 				<div class="feed-item feed-item--steps">
 					<h3 class="feed-item__headline">Этапы сотрудничества</h3>
 					<div class="feed-item__slider">
-						<div class="feed-item__slide"></div>
+						<div class="feed-item__slide">
+							<span class="feed-item__number">01</span>
+							<h4 class="feed-item__step-name">Оценка стоимости работ</h4>
+							<p class="feed-item__step-content">Вы оставляете заявку на сайте. <br>
+							С вами связывается менеджер, обсуждает детали проекта, и делает рассчет всех работ.</p>
+						</div>
 						<div class="feed-item__slide"></div>
 						<div class="feed-item__slide"></div>
 					</div>
