--- a/src/index.html
+++ b/src/index.html
@@ -359,7 +359,10 @@
 				<div class="feed-item feed-item--reviews">
 					<h3 class="feed-item__headline">Отзывы заказчиков</h3>
 					<div class="feed-item__slider">
-						<div class="feed-item__item"></div>
+						<div class="feed-item__item">
+							<p class="feed-item__review-content">Я обратился в студию Березка для разработки логотипа своей кондитерской, я очень рад, что в этом важном этапе мне помогали именно вы. Мне предложили сразу несколько достойных вариантов, поэтому определиться с выбором не составило труда. Спасибо за профессиональный подход, сделали все четко и быстро, в наши дни это бесценно!!</p>
+							<p class="feed-item__author">Кондитреский дом «Алексей Алутнин»</p>
+						</div>
 						<div class="feed-item__item"></div>
 						<div class="feed-item__item"></div>
 					</div>
