Секция с вопросами готова

--- a/src/index.html
+++ b/src/index.html
@@ -374,10 +374,29 @@
 				<h2 class="faq__headline headline">Самые частые вопросы</h2>
 				<div class="faq__questions">
 					<div class="faq__item">
+						<p class="faq__quest">А вдруг мне не понравится результат?</p>
+						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
+						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
+						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.</p>
+					</div>
+					<div class="faq__item">
 						<p class="faq__quest">Как проходит работа?</p>
 						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
 						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
 						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.</p>
+					</div>
+					<div class="faq__item">
+						<p class="faq__quest">Как оплатить заказ?</p>
+						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
+						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
+						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.</p>
+					</div>
+					<div class="faq__item">
+						<p class="faq__quest">А можно поучаствовать в процессе дизайна?</p>
+						<button class="faq__btn"><span class="visually-hidden">Показать текст</span><i></i></button>
+						<p class="faq__answer">Оставьте заявку — вам позвонит менеджер и ответит на все вопросы.
+						После этого надо заполнить анкету-бриф и оплатить заказ. Ваш личный менеджер проверит бриф и задаст уточняющие вопросы. После этого бриф еще раз проверяет арт-директор, и, если у нее нет вопросов, отправляет ваш заказ в отдел дизайна. Под руководством арт-директора дизайнеры делают ваш заказ и на 14 день ваш личный менеджер презентует вам стиль.
+						</p>
 					</div>
 				</div>
 			</div>
